# local-network-messenger

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt  requirements.txt
lib/: CMakeLists.txt
lib/Client/: CMakeLists.txt  client.hpp  client_servers.hpp  main.cpp
lib/LexParser/: CMakeLists.txt  errors.hpp  lexparser.cpp  lexparser.hpp
lib/Logger/: CMakeLists.txt  logger.hpp
lib/Logic/: CMakeLists.txt  errors.hpp  logic.hpp  logic_write_buffer.hpp
src/: CMakeLists.txt  errors.hpp  main.cpp
